playlistmodel: always set the working directory for files inside m3u playlist

BUG: 500740